fixed h1 font size on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -89,6 +89,11 @@
   main#home h1 {
     margin-top: 10vh;
   }
+  main {
+    .lg-heading {
+      font-size: 3rem;
+    }
+  }
   .projects {
     grid-template-columns: 1fr;
   }
